--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.15.13",
     "md5": "^2.3.0",
     "vue": "^2.6.14",
+    "vue-i18n": "8",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
